# get_class_schedule

./: .gitignore  Cargo.toml  README.md
src/: config.rs  jwglxt.rs  main.rs
